--- a/series.conf
+++ b/series.conf
@@ -27,7 +27,6 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
-	patches.kernel.org/patch-3.7.1
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -200,14 +199,6 @@
 	# Queued for 2.6.36 -> just revert after some time
 	patches.fixes/acpi_ec_sys_access_user_space_with_get_user.patch
 
-	patches.arch/001-acpi_initrd_override_tables.patch
-	patches.arch/002-acpi_initrd_override_tables.patch
-	patches.arch/003-acpi_initrd_override_tables.patch
-	patches.arch/004-acpi_initrd_override_tables.patch
-	patches.arch/005-acpi_initrd_override_tables.patch
-	patches.arch/006-acpi_initrd_override_tables.patch
-	patches.arch/007-acpi_initrd_override_tables.patch
-	patches.arch/008-acpi_initrd_override_tables.patch
 	patches.arch/009-acpi_initrd_override_tables.patch
 	patches.arch/010-acpi_initrd_override_tables.patch
 
@@ -215,7 +206,7 @@
 	# CPUFREQ
 	########################################################
 
-	patches.fixes/cpufreq_ondemand_performance_optimise_default_settings.patch
++trenn	patches.fixes/cpufreq_ondemand_performance_optimise_default_settings.patch
 
 ## cpuidle perf events cleanups and related
 	patches.arch/perf_timechart_fix_zero_timestamps.patch
@@ -228,8 +219,6 @@
 	########################################################
 	# Suse specific stuff
 	########################################################
-	patches.suse/suse-hv-fate314663-0001-mm-Export-a-function-to-get-vm-committed-memory.patch
-	patches.suse/suse-hv-fate314663-0002-Drivers-hv-Add-Hyper-V-balloon-driver.patch
 	patches.suse/suse-hv-fate314663-0003-Drivers-hv-balloon-Fix-a-bug-in-the-definition-of-st.patch
 	patches.suse/suse-hv-fate314663-0004-Drivers-hv-balloon-Fix-a-memory-leak.patch
 	patches.suse/suse-hv-fate314665-0001-Drivers-hv-Implement-routines-for-read-side-signalin.patch
@@ -260,7 +249,6 @@
 	patches.suse/suse-hv-fate314665-0026-Drivers-hv-Implement-flow-management-on-the-send-sid.patch
 	patches.suse/suse-hv-fate314665-0027-Drivers-hv-Capture-the-host-build-information.patch
 	patches.suse/suse-hv-fate314665-0028-Drivers-hv-Cleanup-and-consolidate-reporting-of-buil.patch
-	patches.suse/suse-hv-identify-virtual-pc-in-ata_piix.patch
 
         ########################################################
         # Networking, IPv6
@@ -336,7 +324,10 @@
 	patches.suse/0012-richacl-Automatic-Inheritance.patch
 	patches.suse/0013-richacl-Restrict-access-check-algorithm.patch
 	patches.suse/0014-richacl-xattr-mapping-functions.patch
-	patches.suse/0016-ext4-Implement-richacl-support-in-ext4.patch
+
+	# The RICHACL name index was used for system xattrs. This needs
+	# to be sorted out upstream.
++jeffm	patches.suse/0016-ext4-Implement-richacl-support-in-ext4.patch
 
 	########################################################
 	# other filesystem stuff
@@ -406,7 +397,6 @@
 	########################################################
 	# DRM/Video
 	########################################################
-	patches.fixes/drm-i915-TLB-invalidation-with-MI_FLUSH_DW-requires-.patch
 
 	########################################################
 	# video4linux
@@ -584,124 +574,124 @@
 # on top of them instead.  This reduces workload when
 # re-basing to a newer xen tree.
 #
-	# split out patches
-	patches.xen/kexec-move-segment-code-i386.patch
-	patches.xen/kexec-move-segment-code-x86_64.patch
-	patches.xen/ipv6-no-autoconf
-	patches.xen/pci-guestdev
-	patches.xen/pci-reserve
-
-	# bulk stuff, new files for xen
-	patches.xen/xen3-auto-xen-arch.diff
-	patches.xen/xen3-auto-xen-drivers.diff
-	patches.xen/xen3-auto-include-xen-interface.diff
-	patches.xen/xen3-auto-blktap2-pvops.diff
-
-	# kconfig bits for xen
-	patches.xen/xen3-auto-xen-kconfig.diff
-
-	# common code changes
-	patches.xen/xen3-auto-common.diff
-	patches.xen/xen3-auto-arch-x86.diff
-	patches.xen/xen3-auto-arch-i386.diff
-	patches.xen/xen3-auto-arch-x86_64.diff
-
-	# fixups due to upstream Xen parts
-	patches.xen/xen3-fixup-xen
-
-	# newer changeset backports
-
-	# changes outside arch/{i386,x86_64}/xen
-	patches.xen/xen3-fixup-kconfig
-	patches.xen/xen3-fixup-common
-	patches.xen/xen3-fixup-arch-x86
-	patches.xen/xen3-fixup-blktap2-pvops
-
-	# ports of upstream patches
-	patches.xen/xen3-patch-2.6.18
-	patches.xen/xen3-patch-2.6.19
-	patches.xen/xen3-patch-2.6.20
-	patches.xen/xen3-patch-2.6.21
-	patches.xen/xen3-patch-2.6.22
-	patches.xen/xen3-patch-2.6.23
-	patches.xen/xen3-patch-2.6.24
-	patches.xen/xen3-patch-2.6.25
-	patches.xen/xen3-patch-2.6.26
-	patches.xen/xen3-patch-2.6.27
-	patches.xen/xen3-patch-2.6.28
-	patches.xen/xen3-patch-2.6.29
-	patches.xen/xen3-patch-2.6.30
-	patches.xen/xen3-patch-2.6.31
-	patches.xen/xen3-patch-2.6.32
-	patches.xen/xen3-patch-2.6.33
-	patches.xen/xen3-patch-2.6.34
-	patches.xen/xen3-patch-2.6.35
-	patches.xen/xen3-patch-2.6.36
-	patches.xen/xen3-patch-2.6.37
-	patches.xen/xen3-patch-2.6.38
-	patches.xen/xen3-patch-2.6.39
-	patches.xen/xen3-patch-3.0
-	patches.xen/xen3-patch-3.1
-	patches.xen/xen3-patch-3.2
-	patches.xen/xen3-patch-3.3
-	patches.xen/xen3-patch-3.4
-	patches.xen/xen3-patch-3.5
-	patches.xen/xen3-patch-3.6
-	patches.xen/xen3-patch-3.7
-
-	# ports of other patches
-	patches.xen/xen3-003-acpi_initrd_override_tables.patch
-	patches.xen/xen3-007-acpi_initrd_override_tables.patch
-	patches.xen/xen3-010-acpi_initrd_override_tables.patch
-	patches.xen/xen3-stack-unwind
-	patches.xen/xen3-x86_64-unwind-annotations
-
-	# bugfixes and enhancements
-	patches.xen/xen-sys-suspend
-	patches.xen/xen-ipi-per-cpu-irq
-	patches.xen/xen-virq-per-cpu-irq
-	patches.xen/xen-clockevents
-	patches.xen/xen-spinlock-poll-early
-	patches.xen/xen-pcpu-hotplug
-	patches.xen/xen-pcpu-hotplug-kexec
-	patches.xen/xen-mem-hotplug
-	patches.xen/xen-swiotlb-heuristics
-	patches.xen/xen-configurable-guest-devices
-	patches.xen/xen-setup-gsi
-	patches.xen/xen-sections
-	patches.xen/xen-unpriv-build
-	patches.xen/xen-cpufreq-report
-	patches.xen/xen-multi-page-ring
-	patches.xen/xen-balloon-max-target
-	patches.xen/xen-blkback-multi-page-ring
-	patches.xen/xen-blkback-cdrom
-	patches.xen/xen-blkif-protocol-fallback-hack
-	patches.xen/xen-blkfront-multi-page-ring
-	patches.xen/xen-blkif-op-packet
-	patches.xen/xen-blkfront-cdrom
-	patches.xen/xen-blkfront-hvm-no-cdrom
-	patches.xen/xen-blktap-modular
-	patches.xen/xen-blktap-write-barriers
-	patches.xen/xen-blktap2-configurable-nr-devs
-	patches.xen/xen-netback-nr-irqs
-	patches.xen/xen-netback-notify-multi
-	patches.xen/xen-netback-generalize
-	patches.xen/xen-netback-multiple-tasklets
-	patches.xen/xen-netback-kernel-threads
-	patches.xen/xen-cxgb3
-	patches.xen/xen-dcdbas
-	patches.xen/xen-x86-panic-no-reboot
-	patches.xen/xen-x86-dcr-fallback
-	patches.xen/xen-x86-no-lapic
-	patches.xen/xen-x86-pmd-handling
-	patches.xen/xen-x86-bigmem
-	patches.xen/xen-x86-exit-mmap
-	patches.xen/xen-x86-per-cpu-vcpu-info
-	patches.xen/xen-x86-pcpu
-	patches.xen/xen-x86-EFI
-	patches.xen/xen-x86-bzImage
-	patches.xen/xen-x86_64-pgd-pin
-	patches.xen/xen-x86_64-pgd-alloc-order
-	patches.xen/xen-x86_64-dump-user-pgt
-	patches.xen/xen-x86_64-note-init-p2m
-	patches.xen/xen-x86_64-unmapped-initrd
++xen_needs_update	# split out patches
++xen_needs_update	patches.xen/kexec-move-segment-code-i386.patch
++xen_needs_update	patches.xen/kexec-move-segment-code-x86_64.patch
++xen_needs_update	patches.xen/ipv6-no-autoconf
++xen_needs_update	patches.xen/pci-guestdev
++xen_needs_update	patches.xen/pci-reserve
++xen_needs_update
++xen_needs_update	# bulk stuff, new files for xen
++xen_needs_update	patches.xen/xen3-auto-xen-arch.diff
++xen_needs_update	patches.xen/xen3-auto-xen-drivers.diff
++xen_needs_update	patches.xen/xen3-auto-include-xen-interface.diff
++xen_needs_update	patches.xen/xen3-auto-blktap2-pvops.diff
++xen_needs_update
++xen_needs_update	# kconfig bits for xen
++xen_needs_update	patches.xen/xen3-auto-xen-kconfig.diff
++xen_needs_update
++xen_needs_update	# common code changes
++xen_needs_update	patches.xen/xen3-auto-common.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86.diff
++xen_needs_update	patches.xen/xen3-auto-arch-i386.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86_64.diff
++xen_needs_update
++xen_needs_update	# fixups due to upstream Xen parts
++xen_needs_update	patches.xen/xen3-fixup-xen
++xen_needs_update
++xen_needs_update	# newer changeset backports
++xen_needs_update
++xen_needs_update	# changes outside arch/{i386,x86_64}/xen
++xen_needs_update	patches.xen/xen3-fixup-kconfig
++xen_needs_update	patches.xen/xen3-fixup-common
++xen_needs_update	patches.xen/xen3-fixup-arch-x86
++xen_needs_update	patches.xen/xen3-fixup-blktap2-pvops
++xen_needs_update
++xen_needs_update	# ports of upstream patches
++xen_needs_update	patches.xen/xen3-patch-2.6.18
++xen_needs_update	patches.xen/xen3-patch-2.6.19
++xen_needs_update	patches.xen/xen3-patch-2.6.20
++xen_needs_update	patches.xen/xen3-patch-2.6.21
++xen_needs_update	patches.xen/xen3-patch-2.6.22
++xen_needs_update	patches.xen/xen3-patch-2.6.23
++xen_needs_update	patches.xen/xen3-patch-2.6.24
++xen_needs_update	patches.xen/xen3-patch-2.6.25
++xen_needs_update	patches.xen/xen3-patch-2.6.26
++xen_needs_update	patches.xen/xen3-patch-2.6.27
++xen_needs_update	patches.xen/xen3-patch-2.6.28
++xen_needs_update	patches.xen/xen3-patch-2.6.29
++xen_needs_update	patches.xen/xen3-patch-2.6.30
++xen_needs_update	patches.xen/xen3-patch-2.6.31
++xen_needs_update	patches.xen/xen3-patch-2.6.32
++xen_needs_update	patches.xen/xen3-patch-2.6.33
++xen_needs_update	patches.xen/xen3-patch-2.6.34
++xen_needs_update	patches.xen/xen3-patch-2.6.35
++xen_needs_update	patches.xen/xen3-patch-2.6.36
++xen_needs_update	patches.xen/xen3-patch-2.6.37
++xen_needs_update	patches.xen/xen3-patch-2.6.38
++xen_needs_update	patches.xen/xen3-patch-2.6.39
++xen_needs_update	patches.xen/xen3-patch-3.0
++xen_needs_update	patches.xen/xen3-patch-3.1
++xen_needs_update	patches.xen/xen3-patch-3.2
++xen_needs_update	patches.xen/xen3-patch-3.3
++xen_needs_update	patches.xen/xen3-patch-3.4
++xen_needs_update	patches.xen/xen3-patch-3.5
++xen_needs_update	patches.xen/xen3-patch-3.6
++xen_needs_update	patches.xen/xen3-patch-3.7
++xen_needs_update
++xen_needs_update	# ports of other patches
++xen_needs_update	patches.xen/xen3-003-acpi_initrd_override_tables.patch
++xen_needs_update	patches.xen/xen3-007-acpi_initrd_override_tables.patch
++xen_needs_update	patches.xen/xen3-010-acpi_initrd_override_tables.patch
++xen_needs_update	patches.xen/xen3-stack-unwind
++xen_needs_update	patches.xen/xen3-x86_64-unwind-annotations
++xen_needs_update
++xen_needs_update	# bugfixes and enhancements
++xen_needs_update	patches.xen/xen-sys-suspend
++xen_needs_update	patches.xen/xen-ipi-per-cpu-irq
++xen_needs_update	patches.xen/xen-virq-per-cpu-irq
++xen_needs_update	patches.xen/xen-clockevents
++xen_needs_update	patches.xen/xen-spinlock-poll-early
++xen_needs_update	patches.xen/xen-pcpu-hotplug
++xen_needs_update	patches.xen/xen-pcpu-hotplug-kexec
++xen_needs_update	patches.xen/xen-mem-hotplug
++xen_needs_update	patches.xen/xen-swiotlb-heuristics
++xen_needs_update	patches.xen/xen-configurable-guest-devices
++xen_needs_update	patches.xen/xen-setup-gsi
++xen_needs_update	patches.xen/xen-sections
++xen_needs_update	patches.xen/xen-unpriv-build
++xen_needs_update	patches.xen/xen-cpufreq-report
++xen_needs_update	patches.xen/xen-multi-page-ring
++xen_needs_update	patches.xen/xen-balloon-max-target
++xen_needs_update	patches.xen/xen-blkback-multi-page-ring
++xen_needs_update	patches.xen/xen-blkback-cdrom
++xen_needs_update	patches.xen/xen-blkif-protocol-fallback-hack
++xen_needs_update	patches.xen/xen-blkfront-multi-page-ring
++xen_needs_update	patches.xen/xen-blkif-op-packet
++xen_needs_update	patches.xen/xen-blkfront-cdrom
++xen_needs_update	patches.xen/xen-blkfront-hvm-no-cdrom
++xen_needs_update	patches.xen/xen-blktap-modular
++xen_needs_update	patches.xen/xen-blktap-write-barriers
++xen_needs_update	patches.xen/xen-blktap2-configurable-nr-devs
++xen_needs_update	patches.xen/xen-netback-nr-irqs
++xen_needs_update	patches.xen/xen-netback-notify-multi
++xen_needs_update	patches.xen/xen-netback-generalize
++xen_needs_update	patches.xen/xen-netback-multiple-tasklets
++xen_needs_update	patches.xen/xen-netback-kernel-threads
++xen_needs_update	patches.xen/xen-cxgb3
++xen_needs_update	patches.xen/xen-dcdbas
++xen_needs_update	patches.xen/xen-x86-panic-no-reboot
++xen_needs_update	patches.xen/xen-x86-dcr-fallback
++xen_needs_update	patches.xen/xen-x86-no-lapic
++xen_needs_update	patches.xen/xen-x86-pmd-handling
++xen_needs_update	patches.xen/xen-x86-bigmem
++xen_needs_update	patches.xen/xen-x86-exit-mmap
++xen_needs_update	patches.xen/xen-x86-per-cpu-vcpu-info
++xen_needs_update	patches.xen/xen-x86-pcpu
++xen_needs_update	patches.xen/xen-x86-EFI
++xen_needs_update	patches.xen/xen-x86-bzImage
++xen_needs_update	patches.xen/xen-x86_64-pgd-pin
++xen_needs_update	patches.xen/xen-x86_64-pgd-alloc-order
++xen_needs_update	patches.xen/xen-x86_64-dump-user-pgt
++xen_needs_update	patches.xen/xen-x86_64-note-init-p2m
++xen_needs_update	patches.xen/xen-x86_64-unmapped-initrd
