--- a/series.conf
+++ b/series.conf
@@ -2324,6 +2324,7 @@
 	patches.kernel.org/5.18.15-082-pinctrl-armada-37xx-Reuse-GPIO-fwnode-in-arma.patch
 	patches.kernel.org/5.18.15-083-pinctrl-armada-37xx-make-irq_lock-a-raw-spinl.patch
 	patches.kernel.org/5.18.15-084-net-lan966x-Fix-taking-rtnl_lock-while-holdin.patch
+	patches.kernel.org/5.18.15-085-net-lan966x-Fix-usage-of-lan966x-mac_lock-whe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
