--- a/series.conf
+++ b/series.conf
@@ -2257,6 +2257,7 @@
 	patches.kernel.org/5.18.15-015-PCI-hv-Fix-hv_arch_irq_unmask-for-multi-MSI.patch
 	patches.kernel.org/5.18.15-016-PCI-hv-Reuse-existing-IRTE-allocation-in-comp.patch
 	patches.kernel.org/5.18.15-017-PCI-hv-Fix-interrupt-mapping-for-multi-MSI.patch
+	patches.kernel.org/5.18.15-018-r8152-fix-a-WOL-issue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
