--- a/series.conf
+++ b/series.conf
@@ -2259,6 +2259,7 @@
 	patches.kernel.org/5.18.15-017-PCI-hv-Fix-interrupt-mapping-for-multi-MSI.patch
 	patches.kernel.org/5.18.15-018-r8152-fix-a-WOL-issue.patch
 	patches.kernel.org/5.18.15-019-ip-Fix-data-races-around-sysctl_ip_default_tt.patch
+	patches.kernel.org/5.18.15-020-xfrm-xfrm_policy-fix-a-possible-double-xfrm_p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
