--- a/series.conf
+++ b/series.conf
@@ -2271,6 +2271,7 @@
 	patches.kernel.org/5.18.15-029-perf-core-Fix-data-race-between-perf_event_se.patch
 	patches.kernel.org/5.18.15-030-e1000e-Enable-GPT-clock-before-sending-messag.patch
 	patches.kernel.org/5.18.15-031-Revert-e1000e-Fix-possible-HW-unit-hang-after.patch
+	patches.kernel.org/5.18.15-032-igc-Reinstate-IGC_REMOVED-logic-and-implement.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
