--- a/series.conf
+++ b/series.conf
@@ -2246,6 +2246,7 @@
 	patches.kernel.org/5.18.15-004-mlxsw-spectrum_router-Fix-IPv4-nexthop-gatewa.patch
 	patches.kernel.org/5.18.15-005-lockdown-Fix-kexec-lockdown-bypass-with-ima-p.patch
 	patches.kernel.org/5.18.15-006-mmc-sdhci-omap-Fix-a-lockdep-warning-for-PM-r.patch
+	patches.kernel.org/5.18.15-007-mtd-rawnand-gpmi-Set-WAIT_FOR_READY-timeout-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
