--- a/series.conf
+++ b/series.conf
@@ -8100,6 +8100,7 @@
 	patches.suse/net-dev-Change-the-order-of-the-arguments-for-the-co.patch
 	patches.suse/ibmvnic-Update-driver-return-codes.patch
 	patches.suse/ibmvnic-remove-unused-defines.patch
+	patches.suse/net-dsa-hellcreek-Fix-insertion-of-static-FDB-entrie.patch
 	patches.suse/gve-Correct-order-of-processing-device-options.patch
 	patches.suse/gve-Move-the-irq-db-indexes-out-of-the-ntfy-block-st.patch
 	patches.suse/gve-Update-gve_free_queue_page_list-signature.patch
