--- a/series.conf
+++ b/series.conf
@@ -1374,6 +1374,7 @@
 	patches.suse/0001-media-stih-cec-use-cec_notifier_cec_adap_-un-registe.patch
 	patches.suse/0001-media-tegra-cec-use-cec_notifier_cec_adap_-un-regist.patch
 	patches.suse/media-vb2-reorder-checks-in-vb2_poll.patch
+	patches.suse/media-v4l2-mem2mem-reorder-checks-in-v4l2_m2m_poll.patch
 	patches.suse/media-vivid-fix-potential-integer-overflow-on-left-s.patch
 	patches.suse/media-vivid-add-sanity-check-to-avoid-divide-error-a.patch
 	patches.suse/media-vivid-work-around-high-stack-usage-with-clang.patch
