--- a/series.conf
+++ b/series.conf
@@ -21160,6 +21160,7 @@
 	patches.suse/media-af9005-uninitialized-variable-printked.patch
 	patches.suse/media-vp7045-do-not-read-uninitialized-values-if-usb.patch
 	patches.suse/media-rc-ensure-lirc-is-initialized-before-registeri.patch
+	patches.suse/media-rtl28xxu-Add-support-for-PROlectrix-DV107669-D.patch
 	patches.suse/media-ov5640-Fix-check-for-PLL1-exceeding-max-allowe.patch
 	patches.suse/media-i2c-mt9v032-fix-enum-mbus-codes-and-frame-size.patch
 	patches.suse/media-v4l2-rect.h-fix-v4l2_rect_map_inside-top-left-.patch
