--- a/series.conf
+++ b/series.conf
@@ -8143,6 +8143,7 @@
 	patches.suse/ath11k-Fix-deleting-uninitialized-kernel-timer-durin.patch
 	patches.suse/ath11k-Fix-a-NULL-pointer-dereference-in-ath11k_mac_.patch
 	patches.suse/bnx2x-Utilize-firmware-7.13.21.0.patch
+	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
 	patches.suse/mac80211-Remove-a-couple-of-obsolete-TODO.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
 	patches.suse/mt76-mt7615-fix-possible-deadlock-while-mt7615_regis.patch
