--- a/series.conf
+++ b/series.conf
@@ -8202,6 +8202,7 @@
 	patches.suse/sfc-Use-swap-instead-of-open-coding-it.patch
 	patches.suse/veth-Do-not-record-rx-queue-hint-in-veth_xmit.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
+	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
 	patches.suse/can-mcp251xfd-add-missing-newline-to-printed-strings.patch
 	patches.suse/Bluetooth-hci_bcm-Check-for-error-irq.patch
