--- a/series.conf
+++ b/series.conf
@@ -10276,6 +10276,7 @@
 	patches.suse/igc-don-t-reserve-excessive-XDP_PACKET_HEADROOM-on-X.patch
 	patches.suse/ixgbe-don-t-reserve-excessive-XDP_PACKET_HEADROOM-on.patch
 	patches.suse/ixgbe-respect-metadata-on-XSK-Rx-to-skb.patch
+	patches.suse/net-dsa-mv88e6xxx-Enable-port-policy-support-on-6097.patch
 	patches.suse/msft-hv-2523-net-mana-Add-handling-of-CQE_RX_TRUNCATED.patch
 	patches.suse/msft-hv-2524-net-mana-Remove-unnecessary-check-of-cqe_type-in-man.patch
 	patches.suse/net-asix-add-proper-error-handling-of-usb-read-error.patch
