--- a/series.conf
+++ b/series.conf
@@ -10311,6 +10311,7 @@
 	patches.suse/i40e-remove-dead-stores-on-XSK-hotpath.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
 	patches.suse/qed-display-VF-trust-config.patch
+	patches.suse/qed-validate-and-restrict-untrusted-VFs-vlan-promisc.patch
 	patches.suse/bpf-Add-config-to-allow-loading-modules-with-BTF-mis.patch
 	patches.suse/Bluetooth-Fix-not-checking-for-valid-hdev-on-bt_dev_.patch
 	patches.suse/Bluetooth-use-memset-avoid-memory-leaks.patch
