--- a/series.conf
+++ b/series.conf
@@ -10759,6 +10759,7 @@
 	patches.suse/vsock-virtio-initialize-vdev-priv-before-using-VQs.patch
 	patches.suse/vsock-virtio-read-the-negotiated-features-before-usi.patch
 	patches.suse/vsock-virtio-enable-VQs-early-on-probe.patch
+	patches.suse/net-enetc-report-software-timestamping-via-SO_TIMEST.patch
 	patches.suse/net-hns3-fix-bug-when-PF-set-the-duplicate-MAC-addre.patch
 	patches.suse/net-hns3-fix-port-base-vlan-add-fail-when-concurrent.patch
 	patches.suse/net-hns3-add-vlan-list-lock-to-protect-vlan-list.patch
