--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1550,3 +1550,4 @@ c95c34f01bbda4421c25fdc9b04a4a4aab10d36c # xsk: Remove dangling function declara
 ff11a7ce1f0f8c1e7870de26860024b4ddbf5755 # Fixes pointing to misleading commit
 f276031b4e2f4c961ed6d8a42f0f0124ccac2e09 # Comment fix only
 1463f74f492eea7191f0178e01f3d38371a48210 # Build fix that assumes bash does not exist
+ea79e5168be644fdaf7d4e6a73eceaf07b3da76a # Build time micro-optimisation
