--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1553,3 +1553,4 @@ f276031b4e2f4c961ed6d8a42f0f0124ccac2e09 # Comment fix only
 ea79e5168be644fdaf7d4e6a73eceaf07b3da76a # Build time micro-optimisation
 0e11773e76098729552b750ccff79374d1e62002 # Build time micro-optimisation
 9a066357184485784f782719093ff804d05b85db # Build time micro-optimisation
+6ffbb45826f5d9ae09aa60cd88594b7816c96190 # Has a number of high risk dependencies
