--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1554,3 +1554,4 @@ ea79e5168be644fdaf7d4e6a73eceaf07b3da76a # Build time micro-optimisation
 0e11773e76098729552b750ccff79374d1e62002 # Build time micro-optimisation
 9a066357184485784f782719093ff804d05b85db # Build time micro-optimisation
 6ffbb45826f5d9ae09aa60cd88594b7816c96190 # Has a number of high risk dependencies
+cf10bd4c4aff8dd64d1aa7f2a529d0c672bc16af # KASAN not configured
