--- a/series.conf
+++ b/series.conf
@@ -56329,6 +56329,7 @@
 	patches.suse/drm-doc-Fix-comment-typo.patch
 	patches.suse/drm-vc4-plane-Remove-subpixel-positioning-check.patch
 	patches.suse/drm-vc4-plane-Fix-margin-calculations-for-the-right-.patch
+	patches.suse/drm-vc4-dsi-Correct-DSI-divider-calculations.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
