--- a/series.conf
+++ b/series.conf
@@ -56344,6 +56344,7 @@
 	patches.suse/drm-mediatek-dpi-Only-enable-dpi-after-the-bridge-is.patch
 	patches.suse/drm-msm-hdmi-enable-core-vcc-core-vdda-supply-for-89.patch
 	patches.suse/drm-msm-mdp5-Fix-global-state-lock-backoff.patch
+	patches.suse/drm-exynos-exynos7_drm_decon-free-resources-when-clk.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
