--- a/series.conf
+++ b/series.conf
@@ -56341,6 +56341,7 @@
 	patches.suse/drm-bridge-sii8620-fix-possible-off-by-one.patch
 	patches.suse/drm-mediatek-Add-pull-down-MIPI-operation-in-mtk_dsi.patch
 	patches.suse/drm-mediatek-dpi-Remove-output-format-of-YUV.patch
+	patches.suse/drm-mediatek-dpi-Only-enable-dpi-after-the-bridge-is.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
