--- a/series.conf
+++ b/series.conf
@@ -56337,6 +56337,7 @@
 	patches.suse/drm-radeon-fix-potential-buffer-overflow-in-ni_set_m.patch
 	patches.suse/drm-radeon-fix-incorrrect-SPDX-License-Identifiers.patch
 	patches.suse/drm-rockchip-vop-Don-t-crash-for-invalid-duplicate_s.patch
+	patches.suse/drm-rockchip-Fix-an-error-handling-path-rockchip_dp_.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
