--- a/series.conf
+++ b/series.conf
@@ -56313,6 +56313,7 @@
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
+	patches.suse/wifi-iwlegacy-4965-fix-potential-off-by-one-overflow.patch
 	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
 	patches.suse/can-rcar_can-do-not-report-txerr-and-rxerr-during-bu.patch
 	patches.suse/can-sja1000-do-not-report-txerr-and-rxerr-during-bus.patch
