--- a/series.conf
+++ b/series.conf
@@ -56342,6 +56342,7 @@
 	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
 	patches.suse/drm-mipi-dbi-align-max_chunk-to-2-in-spi_transfer.patch
 	patches.suse/drm-nouveau-fix-another-off-by-one-in-nvbios_addr.patch
+	patches.suse/virtio-gpu-fix-a-missing-check-to-avoid-NULL-derefer.patch
 	patches.suse/drm-adv7511-override-i2c-address-of-cec-before-acces.patch
 	patches.suse/drm-bridge-adv7511-Add-check-for-mipi_dsi_driver_reg.patch
 	patches.suse/drm-mcde-Fix-refcount-leak-in-mcde_dsi_bind.patch
