--- a/series.conf
+++ b/series.conf
@@ -56309,6 +56309,7 @@
 	patches.suse/bus-hisi_lpc-fix-missing-platform_device_put-in-hisi.patch
 	patches.suse/ACPI-APEI-Better-fix-to-avoid-spamming-the-console-w.patch
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
+	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
