--- a/series.conf
+++ b/series.conf
@@ -56337,6 +56337,7 @@
 	patches.suse/i2c-cadence-Support-PEC-for-SMBus-block-read.patch
 	patches.suse/i2c-mux-gpmux-Add-of_node_put-when-breaking-out-of-l.patch
 	patches.suse/media-tw686x-Register-the-irq-at-the-end-of-probe.patch
+	patches.suse/media-hdpvr-fix-error-value-returns-in-hdpvr_read.patch
 	patches.suse/drm-bridge-tc358767-Make-sure-Refclk-clock-are-enabl.patch
 	patches.suse/drm-st7735r-Fix-module-autoloading-for-Okaya-RH12812.patch
 	patches.suse/drm-mipi-dbi-align-max_chunk-to-2-in-spi_transfer.patch
