--- a/series.conf
+++ b/series.conf
@@ -56328,6 +56328,7 @@
 	patches.suse/mt76-mt76x02u-fix-possible-memory-leak-in-__mt76x02u.patch
 	patches.suse/mediatek-mt76-mac80211-Fix-missing-of_node_put-in-mt.patch
 	patches.suse/wifi-p54-Fix-an-error-handling-path-in-p54spi_probe.patch
+	patches.suse/wifi-p54-add-missing-parentheses-in-p54_flush.patch
 	patches.suse/i2c-Fix-a-potential-use-after-free.patch
 	patches.suse/i2c-cadence-Support-PEC-for-SMBus-block-read.patch
 	patches.suse/i2c-mux-gpmux-Add-of_node_put-when-breaking-out-of-l.patch
