--- a/series.conf
+++ b/series.conf
@@ -5170,6 +5170,7 @@
 	patches.suse/net-dsa-rtl8366-Fix-a-bug-in-deleting-VLANs.patch
 	patches.suse/net-mlx5e-check-return-value-of-rhashtable_init.patch
 	patches.suse/octeontx2-af-Reset-PTP-config-in-FLR-handler.patch
+	patches.suse/octeontx2-af-cn10k-RPM-hardware-timestamp-configurat.patch
 	patches.suse/gve-DQO-avoid-unused-variable-warnings.patch
 	patches.suse/octeontx2-pf-Enable-promisc-allmulti-match-MCAM-entr.patch
 	patches.suse/ice-Add-DSCP-support.patch
