--- a/series.conf
+++ b/series.conf
@@ -12938,6 +12938,7 @@
 	patches.suse/clk-qcom-gcc-msm8939-Add-missing-system_mm_noc_bfdcd.patch
 	patches.suse/clk-qcom-gcc-msm8939-Point-MM-peripherals-to-system_.patch
 	patches.suse/clk-qcom-ipq8074-fix-NSS-core-PLL-s.patch
+	patches.suse/clk-qcom-ipq8074-SW-workaround-for-UBI32-PLL-lock.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
