--- a/series.conf
+++ b/series.conf
@@ -12930,6 +12930,7 @@
 	patches.suse/drm-nouveau-Don-t-pm_runtime_put_sync-only-pm_runtim.patch
 	patches.suse/drm-amd-display-Enable-building-new-display-engine-w.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
+	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
