--- a/series.conf
+++ b/series.conf
@@ -12935,6 +12935,7 @@
 	patches.suse/clk-qcom-clk-krait-unlock-spin-after-mux-completion.patch
 	patches.suse/clk-qcom-gcc-msm8939-Add-missing-SYSTEM_MM_NOC_BFDCD.patch
 	patches.suse/clk-qcom-gcc-msm8939-Fix-bimc_ddr_clk_src-rcgr-base-.patch
+	patches.suse/clk-qcom-gcc-msm8939-Add-missing-system_mm_noc_bfdcd.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
