--- a/series.conf
+++ b/series.conf
@@ -13035,6 +13035,7 @@
 	patches.suse/clk-qcom-gcc-msm8939-Fix-weird-field-spacing-in-ftbl.patch
 	patches.suse/dmaengine-stm32-mdma-Remove-dead-code-in-stm32_mdma_.patch
 	patches.suse/dmaengine-sf-pdma-Add-multithread-support-for-a-DMA-.patch
+	patches.suse/dmaengine-imx-dma-Cast-of_device_get_match_data-with.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
