--- a/series.conf
+++ b/series.conf
@@ -13009,6 +13009,7 @@
 	patches.suse/iio-fix-iio_format_avail_range-printing-for-none-IIO.patch
 	patches.suse/iio-light-isl29028-Fix-the-warning-in-isl29028_remov.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
+	patches.suse/dt-bindings-usb-mtk-xhci-Allow-wakeup-interrupt-name.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
