--- a/series.conf
+++ b/series.conf
@@ -13039,6 +13039,7 @@
 	patches.suse/dmaengine-dw-edma-Fix-eDMA-Rd-Wr-channels-and-DMA-di.patch
 	patches.suse/mmc-sdhci-of-esdhc-Fix-refcount-leak-in-esdhc_signal.patch
 	patches.suse/mmc-mxcmmc-Silence-a-clang-warning.patch
+	patches.suse/mmc-renesas_sdhi-Get-the-reset-handle-early-in-the-p.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
