--- a/series.conf
+++ b/series.conf
@@ -12991,6 +12991,7 @@
 	patches.suse/iio-frequency-adf4350-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-frequency-adf4371-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-gyro-adis16080-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-gyro-adis16130-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
