--- a/series.conf
+++ b/series.conf
@@ -12994,6 +12994,7 @@
 	patches.suse/iio-gyro-adis16130-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-gyro-adxrs450-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-gyro-fxas210002c-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-imu-fxos8700-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
