--- a/series.conf
+++ b/series.conf
@@ -13003,6 +13003,7 @@
 	patches.suse/iio-resolver-ad2s1200-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-resolver-ad2s90-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-temp-ltc2983-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-temp-maxim_thermocouple-Fix-alignment-for-DMA-sa.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
