--- a/series.conf
+++ b/series.conf
@@ -12954,6 +12954,7 @@
 	patches.suse/iio-adc-max11100-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-max1118-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-adc-max1241-Fix-alignment-for-DMA-safety.patch
+	patches.suse/iio-adc-mcp320x-Fix-alignment-for-DMA-safety.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
